--- a/[bloco-03]-Introdução-HTML-CSS/dia-02-Primeiros-passos-em-CSS/exercicios/resolucao-parte1.html
+++ b/[bloco-03]-Introdução-HTML-CSS/dia-02-Primeiros-passos-em-CSS/exercicios/resolucao-parte1.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style></style>
+    <style>
+        h1 {
+            font-size: 65px;
+            color: orange;            
+        }
+
+        ul {
+            background-color: tomato;
+        }
+        .style-css {
+            background-color: rgb(128, 184, 163);
+        }
+    </style>
   </head>
   <body>
     <h1>Frutas</h1>
-    <p>Qual é a sua fruta favorita?</p>
-    <ul>
+    <p class="style-css">Qual é a sua fruta favorita?</p>
+    <ul class="style-css">
       <li>Maçã</li>
       <li>Banana</li>
       <li>Goiaba</li>
