--- a/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
+++ b/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width" />
   </head>
   <body>
-    <!--insira os elementos aqui-->
+    <header>Soco a 80km/h: Conheça o Stomatopoda</header>
   </body>
 </html>
