--- a/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
+++ b/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
@@ -6,5 +6,12 @@
   </head>
   <body>
     <header>Soco a 80km/h: Conheça o Stomatopoda</header>
+    <nav>
+        <ul>
+            <li>Página inicial</li>
+            <li>Sobre</li>
+            <li>Contato</li>
+        </ul>
+    </nav>
   </body>
 </html>
