Adicionando tags article e section

--- a/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
+++ b/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style2.css">
   </head>
   <body>
     <header>Soco a 80km/h: Conheça o Stomatopoda</header>
@@ -12,6 +13,13 @@
             <li>Sobre</li>
             <li>Contato</li>
         </ul>
+    <article>
+            <h2>Fatos sobre o Stomatopoda</h2>
+            <img class="imagem1" src="https://s3.amazonaws.com/theoatmeal-img/comics/mantis_shrimp/mantis_shrimp_3.jpg"> 
+          <section>
+            
+          </section>
+    </article>
     </nav>
   </body>
 </html>
