--- a/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
+++ b/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
@@ -15,9 +15,16 @@
         </ul>
     <article>
             <h2>Fatos sobre o Stomatopoda</h2>
-            <img class="imagem1" src="https://s3.amazonaws.com/theoatmeal-img/comics/mantis_shrimp/mantis_shrimp_3.jpg"> 
+            <img class="imagem1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg"> 
           <section>
-            
+            <h3>Informações gerais</h3>
+            <p>Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p> 
+            <p>São animais que apresentam comportamentos sociais muito variados, desde ameaças visuais contra predadores até comportamentos de côrte. De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos apresenta sua própria variação comportamental e até mesmo de habitat.<br>
+
+            As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm².[3] Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.[4][5]
+                
+            Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas não são animais fáceis de se observar pelos seus hábitos mais furtivos. Devem ser manuseados com muita cautela pois são animais preparados para se defender com força, caso sejam incomodados.</p>
+
           </section>
     </article>
     </nav>
