--- a/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
+++ b/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
@@ -81,7 +81,18 @@
             <p>São animais que apresentam comportamentos sociais muito variados, desde ameaças visuais contra predadores até comportamentos de côrte. De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos apresenta sua própria variação comportamental e até mesmo de habitat.</p>
         </ul>
         </section>
+        <section>
+            <h3>Referências bibliográficas</h3>
+            <ol>
+                <li>https://pt.wikipedia.org/wiki/Stomatopoda</li>
+                <li>https://theoatmeal.com/comics/mantis_shrimp</li>
+                <li>https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder</li>
+            </ol>
+        </section>
     </article>
+    <aside>
+        <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">Vídeo auxiliar</a>
+    </aside>
     </nav>
   </body>
 </html>
