--- a/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
+++ b/[bloco-03]-Introdução-HTML-CSS/dia-04-HTML-Semântico/exercicios/resolução2.html
@@ -19,6 +19,7 @@
             <h2>Informações gerais</h2>
             <img class="imagem1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg"> 
             <p>Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p> 
+            <table>
             <ul>
                 <li><h3>Reino</h3></li>
                 <p>Animalia, Animal ou Metazoa[1] é um reino biológico composto por seres vivos pluricelulares, eucariontes, heterotróficos, cujas células formam tecidos biológicos, com capacidade de responder ao ambiente (possuem tecido nervoso) que os envolve ou, por outras palavras, pelos animais.[2]
@@ -52,6 +53,7 @@
                 <li><h3>Ordem</h3></li>
                 <p>Stomatopoda</p>
             </ul>
+            </table>
           </section>
         <section>
             <h2>Fatos interessantes</h2>
@@ -93,6 +95,9 @@
     <aside>
         <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">Vídeo auxiliar</a>
     </aside>
+    <footer>
+        "Conteúdo compilado por Douglas Bacelar, 2022".
+    </footer>
     </nav>
   </body>
 </html>
