--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/Exercise1.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/Exercise1.html
@@ -11,3 +11,11 @@
   </section>
 </main>
 <script>
+  const elementoOndeVoceEsta = document.getElementById('elementoOndeVoceEsta');
+console.log(elementoOndeVoceEsta);
+
+  const pai = elementoOndeVoceEsta.parentElement;
+  pai.style.color = 'blue';
+console.log(pai);
+ 
+</script>
