--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/Exercise1.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/Exercise1.html
@@ -10,6 +10,7 @@
     <section id="quartoEUltimoFilho"></section>
   </section>
 </main>
+
 <script>
   const elementoOndeVoceEsta = document.getElementById('elementoOndeVoceEsta');
 console.log(elementoOndeVoceEsta);
@@ -17,5 +18,16 @@ console.log(elementoOndeVoceEsta);
   const pai = elementoOndeVoceEsta.parentElement;
   pai.style.color = 'blue';
 console.log(pai);
- 
+
+ const filhoDoFilho = elementoOndeVoceEsta.firstElementChild;
+ filhoDoFilho.innerText = 'Primeiro filho do filho'
+ console.log(filhoDoFilho);
+
+ const primeiroFilho = document.getElementById('pai');
+ primeiroFilho.firstElementChild;
+ console.log(primeiroFilho);
+
+ const firstSon = pai.firstElementChild;
+ console.log(firstSon);
+
 </script>
