Resolução desafios 6,7 e 8 do exercise 1

--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/Exercise1.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/Exercise1.html
@@ -30,4 +30,16 @@ console.log(pai);
  const firstSon = pai.firstElementChild;
  console.log(firstSon);
 
+ const firstSon2 = elementoOndeVoceEsta.previousElementSibling
+ console.log(firstSon2);
+
+ const text = elementoOndeVoceEsta.nextSibling;
+ console.log(text);
+
+ thirdSon = elementoOndeVoceEsta.nextElementSibling;
+ console.log(thirdSon);
+
+ thirdSon2 = pai.lastElementChild.previousElementSibling;
+ console.log(thirdSon2);
+ 
 </script>
