Finalizando 2 requisitos do exercicio 4

--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
@@ -57,7 +57,15 @@
   </head>
   <body>
     <script>
-      // COLOQUE SEU CÓDIGO AQUI
+      const adicionaH1 = document.createElement('h1');
+      adicionaH1.innerText = 'Exercício - JavaScript DOM'
+      document.body.appendChild(adicionaH1);
+  
+      const adicionaMain = document.createElement('Main');
+      adicionaMain.className = 'main-content';
+      document.body.appendChild(adicionaMain);
+
+      
     </script>
   </body>
 </html>
