Realizando requisito 3 dos exercicios3

--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
@@ -65,7 +65,10 @@
       adicionaMain.className = 'main-content';
       document.body.appendChild(adicionaMain);
 
-      
+      const adicionasection = document.createElement('Section');
+      adicionasection.className = 'center-content';
+      adicionaMain.appendChild(adicionasection);
+
     </script>
   </body>
 </html>
