Adicionando requisito 4 e 5 do exercicio 4

--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
@@ -69,6 +69,15 @@
       adicionasection.className = 'center-content';
       adicionaMain.appendChild(adicionasection);
 
+      const adicionaParagrafo = document.createElement('p');
+      adicionaParagrafo.innerHTML = 'Teste do exercisio';
+      adicionasection.appendChild(adicionaParagrafo);
+
+      const adicionaSection2 = document.createElement('Section');
+      adicionaSection2.className = 'left-content';
+      adicionaMain.appendChild(adicionaSection2);
+
+      
     </script>
   </body>
 </html>
