--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
@@ -57,34 +57,48 @@
   </head>
   <body>
     <script>
+      // Adicione a tag h1 com o texto Exercício - JavaScript DOM como filho da tag body;
       const adicionaH1 = document.createElement('h1');
       adicionaH1.innerText = 'Exercício - JavaScript DOM'
       document.body.appendChild(adicionaH1);
-  
+
+      // Adicione a tag main com a classe main-content como filho da tag body;
       const adicionaMain = document.createElement('Main');
       adicionaMain.className = 'main-content';
       document.body.appendChild(adicionaMain);
+
+      // Adicione a tag section com a classe center-content como filho da tag main criada no passo 2;
 
       const adicionasection = document.createElement('Section');
       adicionasection.className = 'center-content';
       adicionaMain.appendChild(adicionasection);
 
+      // Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
+
       const adicionaParagrafo = document.createElement('p');
       adicionaParagrafo.innerHTML = 'Teste do exercisio';
       adicionasection.appendChild(adicionaParagrafo);
+
+      // Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
 
       const adicionaSection2 = document.createElement('Section');
       adicionaSection2.className = 'left-content';
       adicionaMain.appendChild(adicionaSection2);
 
+      // Adicione a tag section com a classe right-content como filho da tag main criada no passo 2;
+
       const adicionaSection3 = document.createElement('Section');
       adicionaSection3.className = 'right-content';
       adicionaMain.appendChild(adicionaSection3);
+
+      // Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image. Esse elemento deve ser filho do section criado no passo 5;
 
       const imagem = document.createElement('img');
       imagem.className = 'small-image';
       imagem.src ='https://picsum.photos/200';
       adicionaSection2.appendChild(imagem);
+
+      // Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um, dois, três, … como valores da lista. Essa lista deve ser filha do section criado no passo 6;
 
       const listaNaoOrdenada = document.createElement('ul');
       adicionaSection3.appendChild(listaNaoOrdenada);
@@ -95,24 +109,51 @@
         listaNaoOrdenada.appendChild(lista);
       };
 
+      // Adicione 3 tags h3, todas sendo filhas do main criado no passo 2.
+
       for(let index = 1; index <= 3; index += 1) {
       const adicionaH3 = document.createElement('h3');
       adicionaH3.innerHTML = 'Criação' + index;
       adicionaMain.appendChild(adicionaH3);
     };
 
+    // Adicione a classe title na tag h1 criada;
+
     const adicionaTitle = document.querySelector('h1');
     adicionaTitle.className = 'title';
+
+    // Adicione a classe description nas 3 tags h3 criadas;
     
     const adicionaDescription = document.getElementsByTagName('h3');
     for (let index = 0; index < 3; index += 1) {
       adicionaDescription[index].className = 'description';
     };
 
+    // Remova a section criado no passo 5 (aquele que possui a classe left-content). Utilize a função .removeChild();
+
     const removaSection = document.getElementsByClassName('left-content')[0];
     adicionaMain.removeChild(adicionaSection2);
 
+    // Centralize a section criado no passo 6 (aquele que possui a classe right-content). Dica: para centralizar, basta configurar o margin-right: auto da section;
+
     const centralizaSection = document.getElementsByClassName('right-content')[0];
+    centralizaSection.style.marginRight = 'auto';
+
+    // Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content) para a cor verde;
+
+    const mudaCor = document.getElementsByClassName('center-content')[0];
+    mudaCor.parentNode.style.backgroundColor = 'green';
+
+    // Remova os dois últimos elementos (nove e dez) da lista criada no passo 8.
+
+    const removaElementos = document.getElementsByTagName('ul')[0];
+    for(let index = 0; index <= array.length; index += 1) {
+      if(array[index] = 'nove' || 'dez') {
+        array.remove()
+      }
+    }
+
+    
 
 
 
