--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise3.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise3.html
@@ -11,9 +11,10 @@
   </section>
 </main>
 <script>
-const remocao = () => {
+
 const pai = document.getElementById('pai');
 const todosOsFilhos = pai.childNodes;
+console.log(todosOsFilhos);
 for(let index = todosOsFilhos.length -1; index >= 0; index -= 1) {
 const filhoAtual = todosOsFilhos[index];
 if(filhoAtual.id !== 'elementoOndeVoceEsta') {
@@ -22,6 +23,6 @@ if(filhoAtual.id !== 'elementoOndeVoceEsta') {
 }
 const segundoEUltimoFilhoDoFilho = document.getElementById('segundoEUltimoFilhoDoFilho');
 segundoEUltimoFilhoDoFilho.remove();
-};
+
 
 </script>
