--- a/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
+++ b/[bloco-05]-JavaScript-DOM-Eventos-e-Web-Storage/dia-02-JavaScript-Trabalhando-com-elementos/Exercicios1/exercise4.html
@@ -147,11 +147,8 @@
     // Remova os dois últimos elementos (nove e dez) da lista criada no passo 8.
 
     const removaElementos = document.getElementsByTagName('ul')[0];
-    for(let index = 0; index <= array.length; index += 1) {
-      if(array[index] = 'nove' || 'dez') {
-        array.remove()
-      }
-    }
+    ul.lastChild.remove();
+    ul.lastChild.remove();
 
     
 
