--- a/[bloco-06]-HTML-e-CSS:Forms,Flexbox-e-Responsivo/dia-02-Bibliotecas-JavaScript-e-framework-css/form.html
+++ b/[bloco-06]-HTML-e-CSS:Forms,Flexbox-e-Responsivo/dia-02-Bibliotecas-JavaScript-e-framework-css/form.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Formulario-TrybeTrip</title>
   </head>
   <body>
-    <h1>Concorra à Viagem dos seus sonhos com a TrybeTrip</h1>
+    <h1 class="h1">Concorra à Viagem dos seus sonhos com a TrybeTrip</h1>
 
-    <form>
+    <form class="form-text form-control form-control-lg">
       <fieldset>
         <label for="fullName">Nome Completo:</label>
         <input type="text" id="fullName" name="fullName" placeholder="Digite seu nome completo" maxlength="40" minlength="10" required>      
